<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/backgroundWhite"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@color/white"
        android:gravity="left|center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat,RtlHardcoded" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|center"
        tools:ignore="RtlCompat,RtlHardcoded"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_7"
            />
        <Button
            android:id="@+id/buttonEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="75px"
            android:textColor="@color/black"
            android:onClick="onDigit"
            android:text="@string/_8"
            />
        <Button
            android:id="@+id/buttonNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="75px"
            android:textColor="@color/black"
            android:onClick="onDigit"
            android:text="@string/_9"
            />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textColor="@color/operatorButtonTxt"
            android:textStyle="bold"
            android:textSize="75px"
            android:onClick="onOperator"
            android:text="@string/_divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_4"
            />
        <Button
            android:id="@+id/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_5"
            />
        <Button
            android:id="@+id/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_6"
            />
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/operatorButtonTxt"
            android:textSize="75px"
            android:onClick="onOperator"
            android:text="@string/x"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_1"
            />
        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_2"
            />
        <Button
            android:id="@+id/buttonThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_3"
            />
        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/operatorButtonTxt"
            android:textSize="75px"
            android:onClick="onOperator"
            android:text="-"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="75px"
            android:onClick="onDigit"
            android:text="@string/_0"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/operatorButtonTxt"
            android:textSize="75px"
            android:onClick="onDecimalPoint"
            android:text="@string/_dot"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/clearButtonTxt"
            android:textSize="75px"
            android:onClick="onClear"
            android:text="@string/c"
            />
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/operatorButtonTxt"
            android:textSize="75px"
            android:onClick="onOperator"
            android:text="@string/_add"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_margin="2dp"
            android:backgroundTint="@color/equalButton"
            android:textColor="@color/white"
            android:textSize="75px"
            android:onClick="onEqual"
            android:text="@string/_equal"
            tools:ignore="NestedWeights" />

    </LinearLayout>


</LinearLayout>